# ProjetsLicence

./: README.md
Computer Security - L3/: README.md
Echecs - L3/: README.md
Echecs - L3/VueControleur/: MenuPrincipal.java
L1 - Génération de terrain aléatoire - Bruit de Perlin/: Mini_Projet.cpp  README.md
L2 - Monopoly/: Makefile
L2 - Monopoly/data/: Carte.json  Carte_chance.json
L2 - Monopoly/doc/: doxyfile  ~$PrésentationMonopoly.pptx
L2 - Monopoly/src/: Accueil.cpp  Affichage.cpp  Affichage.h  Caisse_fonctions.cpp  CarteImmo.h  Cartechance.h  Cartecommu.cpp  Chance_fonctions.h  Demander_pseudo.h  ElementTD.cpp  ElementTD.h  Fonctionnalités_Monop.cpp  Gare.cpp  Gare.h  Joueur.cpp  Monopoly.cpp  ServicePublic.h  TableauDynamique.h  Tour_joueur.cpp  Tour_joueur.h
L3 - Echecs/: Main.java  README.md
L3 - Echecs/VueControleur/: VueControleur.java
L3 - Pendu/: README.md
L3 - Pendu/src/: gaddag.hpp  jeuHumain.cpp  jeuHumain.hpp  jeuIA.hpp  main.cpp
L3 - Scrabble/: readme.md
L3 - Scrabble/data/: small_dico.txt
L3 - Scrabble/src/: board.cpp  etat.hpp  jeu.cpp  sac.hpp  tour.cpp  tour.hpp
Monopoly - L2/: README.md
Monopoly - L2/data/: Carte_commu.json
Monopoly - L2/src/: Accueil.h  Caisse_fonctions.h  CarteImmo.cpp  Cartechance.cpp  Cartecommu.h  Chance_fonctions.cpp  Demander_pseudo.cpp  Fonctionnalités_Monop.h  Joueur.h  Menu_nb_joueurs.cpp  Plateau.cpp  (+4 more)
Pendu - L3/: Makefile
Scrabble - L3/: CMakeLists.txt
Scrabble - L3/src/: etat.cpp  gaddag.cpp  gaddag.hpp  jeu.hpp  joueur.cpp  joueur.hpp  lettre.hpp  noeud.hpp  sac.cpp  test_board.cpp
(+121 files in other folders)
